# my_chat_gpt

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CODECOV.md  EVALUATION_SUMMARY.txt  README.md  TEST-STRATEGY.md  USEFUL_LINKS.md  UV.md  local_utils  minimal-requirements.txt  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-proxy.txt  requirements-test.txt  requirements.github.workflow  requirements.txt  setup.py
.github/: CODEOWNERS  __init__.py
.github/actions/: README.md
.github/actions/ruff/: action.yml
.github/actions/set-pythonpath/: action.yml
.github/scripts/: __init__.py  analyze_issue.py  identify_duplicates.py  identify_duplicates_v2.py  pre_commit_lint.sh  test_dependencies.py
.github/workflows/: cleanup.yml  create_issue_comment.yml  issue-analyzer.yml  python-app.yml  python-dependency-minimizer.yml  python-dependency-minimizer.yml.old  test.yml
CollegeGPT/: 01 Introduction to MS&DS.txt  03 Examining your Data.txt  09 Clustering Variables.txt  10 Clustering Variables II.txt  11 Clustering Observations.txt  MPC_AvL.md  college.prompt  mpc_chat_api.py  prompt.txt
DeveloGPT/: Communication.prompt  GitHub_Issue.prompt  Mermaid.prompt  PairProgrammer.prompt.md  Requirements.prompt
Hackathon/GenAI/: DIAGRAM.md  OpenMRS.md  README.md
HealthcareGPT/: HealthcareGPT.md
HealthcareGPT/agents/: HealthcareGPT.agents.md
HealthcareGPT/app/: HealthcareGPT.app.md
Llama/: Llama.md  README.md  integration.md  setup.md  usage.md
Llama/examples/: basic_usage.py  ollama_client.py
Llama/examples/notebooks/: 01_basic_usage.ipynb
MPC_AvL/: 10 Clustering Variables II.txt  11 Clustering Observations.txt  MPC_AvL.md  mpc_chat_api.py  prompt.txt
RGBCheck/: rgb_blender.py
SoftwareFactorAI/: SOFTWARE_FACTOR_AI.md
SoftwareFactorAI/LLMUI/: ai_software_designer_docs.json  ai_software_designer_docs.py  component_interaction.md  design_recommendation.md  implementation_tasks.md  work_breakdown_structure.md
SuperPrompt/: 3tier.md  AI-Agent-Role-Definition.md  __init__.py  agentic_ai_framework_coder.md  analyze_issue_prompt.txt  analyze_issue_system_prompt.txt  analyze_issue_user_prompt.txt  improved-architect-prompt.md  improved-architect-prompt.txt  python-programmer-superprompt.md  software-project-manager-system-prompt.md  software_architect_ai_prompt.txt  software_designer_prompt.txt  superprompt.txt  tester_prompt.txt  urenregistratie_prompt.md
WBSO/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
WBSO/.cursor/: mdc_rules.md  project_mdc.md  python_mdc.md
WBSO/.cursor/rules/: GOLDEN_RULES.md  project-standaarden.mdc  project-standards.mdc  python-standaarden.mdc  python-standards.mdc
WBSO/docs/: CURSOR-RULES.md  api.md  architecture.md
WBSO/src/llm/: client.py  prompts.py
WBSO/src/pdf/: matcher.py  parser.py
WBSO/src/utils/: validators.py
WBSO/tests/: test_llm.py  test_matcher.py  test_parser.py
docs/: GITHUB.md  IMPLEMENTATION_SUMMARY.md
docs/ai_resources/: GOAL_SETTING_DESIGN.md  ISSUE_RESOLUTION_SUMMARY.md  MEMORY_INTEGRATION_DESIGN.md  README.md  TYPE_OF_THOUGHT_EVALUATION.md  USEFUL_LINKS.md
docs/development/: CURSOR.md  DECISIONS.md  ISSUE_BEST_PRACTICES.md  ISSUE_REVIEW_WORKFLOW.md  LINTING.md  README.md  WORKFLOW_CONFIGURATION.md  adr-001-duplicate-issue-detection-triggers.md  pre-commit.md
docs/examples/: EXAMPLE_REVERSE_ENGINEERING_ISSUE.md  README.md
docs/package_management/: UV.md
docs/project_context/: SYSTEM_CONTEXT.md
docs/testing/: README.md  TEST-STRATEGY.md
dspyui/: README.md  package-lock.json  package.json
dspyui/src/: App.js
dspyui/src/components/: Button.js  Dropdown.js
dspyui/src/utils/: data.js
history_download/: README.md  chat.html  conversations.json  user.json
hugging-face-mcp-course/: PLANNING.md  README.md
hugging-face-mcp-course/unit2/: UNIT2.md  mcp-config.json  mcp_gradio_client.py  sentiment_analysis_mcp_server.py  test_client.py
hugging-face-mcp-course/unit2/scripts/: task11.py  task12.py  task21.py  task22.py  task31.py  task32.py  task33.py  task34.js
my_chat_gpt_utils/: README.md  __init__.py  agents_sdk.py  ai_doc_writer.py  analyze_issue.py  exceptions.py  github_utils.py  logger.py  openai_utils.py  path_setup.py  prompts.py
my_chat_gpt_utils/docs/: GITHUB_TOKEN.md  OPENAI_API_KEY.md  TEST-STRATEGY.md  VIBE-CODING.md
notebooks/: 01_DSpy_Ollama_Setup.ipynb  01_LangChain_DSpy_Ollama_Setup.ipynb  01_LangChain_Ollama_Setup.ipynb  02_Website_Scraping_Playwright.ipynb  LangChain_DSpy_Ollama_Setup.ipynb  OpenAI_Agents_SDK_with_Guardrails.ipynb  README_OpenAI_Agents.md  __init__.py  analyze_issue.ipynb  quick_start_example.py  review_test_script.py  smolagents_code_review.ipynb  style_guide.md
notebooks/OpenAI/: test_api_call.ipynb
scripts/: README.md  cleanup-github-actions.sh  cleanup-merged-branches.sh  collect_langchain_articles.py  identify_duplicates.py
tests/: conftest.py  project_root.py  test_analyze_issue.py  test_github_utils.py  test_logger.py
tests/integration/: test_analyze_issue_integration.py
tests/integration/github_utils/: test_issue_retriever_integration.py
tests/my_chat_gpt_utils/: __init__.py  test_analyze_issue.py
tests/unit/: test_prompts.py
tests/unit/github_utils/: test_github_client.py  test_issue_retriever.py  test_issue_similarity.py  test_label_manager.py
utils/: README.md  ai_doc_writer.py  analyze_issue.py  github_utils.py  logger.py  openai_utils.py  prompts.py
vibe_coding_samples/: conftest.py  knight_bishop_solver.py  pytest.ini  test_interesting_case.py  test_knight_bishop_solver.py  test_simple_knight.py
vibe_coding_samples/keen_solver/: keen-solver.py
vibe_coding_samples/ollama_stack/: README.md  docker-compose.yml  update.sh
vibe_coding_samples/ollama_stack/ollama-plus/: Dockerfile
vibe_coding_samples/talk_to_ollama/: README.md  index.html  requirements.txt  talk_to_ollama.py
