[project]
name = "my_chat_gpt"
version = "0.1.0"
description = "A collection of LLM documents and experiments, including ChatGPT and local Ollama."
authors = ["Pieter Kuppens <pieter.kuppens@gmail.com>"]
license = {name = "MIT", file = "LICENSE"}

dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "APScheduler==3.11.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "async-timeout==5.0.1",
    "asyncer==0.0.8",
    "attrs==24.3.0",
    "babel==2.16.0",
    "backcall==0.2.0",
    "backoff==2.2.1",
    "backports.tarfile==1.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "build==1.2.2.post1",
    "CacheControl==0.14.1",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "cleo==2.1.0",
    "click==8.1.8",
    "cloudpickle==3.1.0",
    "cmake==3.31.2",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "crashtest==0.4.1",
    "cryptography==42.0.5",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==2.14.4",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.7",
    "diskcache==5.6.3",
    "distlib==0.3.9",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "dspy==2.5.43",
    "dulwich==0.21.7",
    "email_validator==2.2.0",
    "executing==2.1.0",
    "fastapi==0.111.1",
    "fastapi-cli==0.0.7",
    "fastapi-sso==0.10.0",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "greenlet==3.1.1",
    "gunicorn==22.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "installer==0.7.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jedi==0.19.2",
    "Jinja2==3.1.5",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "json5==0.10.0",
    "json_repair==0.35.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.11.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server-mathjax==0.2.6",
    "jupyter-server-ydoc==1.1.0",
    "jupyter-ydoc==3.0.2",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyter_server==2.15.0",
    "jupyter_server_fileid==0.9.3",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.3.4",
    "jupyterlab_git==0.50.2",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "jupyterlab_widgets==3.0.13",
    "keyring==24.3.1",
    "kiwisolver==1.4.7",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-core==0.3.29",
    "langchain-ollama==0.2.2",
    "langchain-text-splitters==0.3.4",
    "langsmith==0.2.10",
    "lit==18.1.8",
    "litellm==1.53.7",
    "magicattr==0.1.6",
    "Mako==1.3.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "marshmallow==3.24.1",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==2.0.5",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multiprocess==0.70.15",
    "mypy-extensions==1.0.0",
    "nbclassic==1.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.4",
    "nbdime==4.0.2",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.2",
    "notebook_shim==0.2.4",
    "numpy==1.26.4",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-nvtx-cu11==11.8.86",
    "oauthlib==3.2.2",
    "ollama==0.4.5",
    "openai==1.58.1",
    "optuna==4.1.0",
    "orjson==3.10.13",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.0.0",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "poetry==1.8.5",
    "poetry-core==1.9.1",
    "poetry-plugin-export==1.8.0",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.48",
    "propcache==0.2.1",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyarrow==18.1.0",
    "pycparser==2.22",
    "pycrdt==0.10.9",
    "pycrdt-websocket==0.15.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "Pygments==2.18.0",
    "PyJWT==2.10.1",
    "PyNaCl==1.5.0",
    "pyparsing==3.2.0",
    "pyproject_hooks==1.2.0",
    "pyrsistent==0.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.2.1",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "pywin32==308",
    "pywin32-ctypes==0.2.3",
    "pywinpty==2.0.14",
    "PyYAML==6.0.2",
    "pyzmq==26.2.0",
    "RapidFuzz==3.11.0",
    "redis==5.2.1",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rich-toolkit==0.12.0",
    "rpds-py==0.22.3",
    "rq==2.1.0",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "Send2Trash==1.8.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.36",
    "sqlite-anyio==0.2.3",
    "stack-data==0.6.3",
    "starlette==0.45.2",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.0",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "torch==2.5.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trove-classifiers==2024.10.21.16",
    "typer==0.15.1",
    "types-python-dateutil==2.9.0.20241206",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "ujson==5.10.0",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "uvicorn==0.22.0",
    "virtualenv==20.28.0",
    "watchfiles==1.0.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "widgetsnbextension==4.0.13",
    "xxhash==3.5.0",
    "y-py==0.6.2",
    "yarl==1.18.3",
    "ypy-websocket==0.12.4",
    "zipp==3.21.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"