[project]
name = "wbso-ai-agent"
version = "0.1.0"
description = "AI Agent to assist with filling out WBSO development project software application forms"
authors = [
    {name = "Pieter Kuppens", email = "pieter.kuppens@gmail.com"}
]
dependencies = [
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # "pytest-cov>=4.0.0",  # Coverage disabled for local development
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 132

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable only whitespace and unused import rules.
# E2/E3 removed: they require preview mode and have no effect otherwise.
select = [
    "E4",  # pycodestyle whitespace errors
    "E5",  # pycodestyle whitespace errors
    "F401",  # unused imports
    "F403",  # star imports
    "F405",  # star imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage settings commented out for local development
# addopts = "-v --cov=src"
addopts = "-v"
